feat: add text and adjust layout 80% of ex1

--- a/index.html
+++ b/index.html
@@ -9,5 +9,50 @@
   </head>
   <body>
     <!-- Start Coding Here -->
+
+    <!-- Start coding by O-->
+    <section id="contact" class="flex justify-center" >
+      <div id="white-block" class="bg-red-300 w-10/12 flex justify-center">
+        <div id="inputform" class="flex flex-col justify-center items-center gap-6 w-2/4 bg-yellow-300 py-8">
+          <h1 class="text-4xl">Get in Touch</h1>
+
+          <div id="input_interface" class="flex flex-col gap-3 w-full ">
+
+            <div id="nameinput" class="flex flex-col gap-1">
+              <label for="inputname">Name</label>
+              <input type="text" placeholder="John Doe" class="h-8"/>
+            </div>
+            <div id="emailinput" class="flex flex-col gap-1">
+              <label for="input_email">Email</label>
+              <input type="email" placeholder="John@example.com" class="h-8"/>
+            </div>
+            <div id="messageinput" class="flex flex-col gap-1">
+              <label for="input_email">Message</label>
+              <textarea name="Message" cols="40" rows="3" placeholder="Your message..."></textarea>
+            </div>
+          </div>
+
+          <div id="buttonSubmit" class="w-full bg-slate-500">
+            <button type="button" class="w-full bg-slate-200 h-9">Submit</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="flex justify-center  bg-red-500">
+      <div class="flex justify-between w-10/12 py-10">
+      <div id="trade_mark">Acme productivity app ©2024 </div>
+      <div id="footer_menu" class="flex justify-between gap-6">
+        <a href="index.html">FAQ</a>
+        <a href="index.html">Terms</a>
+        <a href="index.html">AI Policy</a>
+        <a href="index.html">Pricing</a>
+      </div>
+    </div>
+
+    </footer>
+
+
+
   </body>
 </html>
