--- a/index.html
+++ b/index.html
@@ -7,7 +7,35 @@
     <title>Acme App</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
-    <!-- Start Coding Here -->
+  <body class="bg-gray-100">
+    <nav class="bg-white border rounded-[50px] p-6 m-10">
+      <img class="w-15 h-10 pl-10 absolute top-[55px]" src="image/logo.png " />
+      <ul class="flex justify-end items-center gap-20 mr-[50px]">
+        <p class="underline text-indigo-600">Home</p>
+        <p>Features</p>
+        <p>Pricing</p>
+        <p>Contact</p>
+      </ul>
+    </nav>
+    <header class="flex items-center flex-col">
+      <p
+        class="mt-[200px] border rounded-full bg-violet-200 px-4 py-1 text-indigo-600"
+      >
+        🌈Acme Productivity App
+      </p>
+      <div class="text-[80px] flex font-bold">
+        <span>Boost Your </span>
+        <span class="text-indigo-500 ml-4">Product</span>
+        <span>ivity</span>
+      </div>
+      <p class="text-[20px] font-semibold">
+        streamline your workflow with our all-in-one productivity app
+      </p>
+      <div
+        class="mt-[50px] border rounded-[20px] bg-black text-white px-10 py-4"
+      >
+        Start Free Trial
+      </div>
+    </header>
   </body>
 </html>
