feat: add ex2 fifa

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
       </div>
     </header>
   <body>
-    <!-- Start Coding Here -->
+    <!-- Start Coding Here by fifa-->
     <div
-      class="flex flex-row flex justify-evenly flex items-stretch p-[50px] w-[100vw]"
+      class="flex max-sm:flex-col flex-row flex max-sm:justify-center flex max-sm:items-center flex justify-evenly flex items-stretch max-sm:w-[100%] max-sm:px-[16px] max-sm:p-[16px] max-sm:gap-[16px] p-[50px] w-[100vw]"
     >
       <div
-        class="w-[30%] rounded-[24px] p-[30px] flex flex-col flex justify-start flex items-start bg-[#d7e5f6]"
+        class="max-sm:w-[100%] max-sm:p-[24px] w-[30%] rounded-[24px] p-[30px] flex flex-col flex justify-start flex items-start bg-[#d7e5f6]"
       >
         <svg
           width="33"
@@ -81,7 +81,7 @@
       </div>
 
       <div
-        class="w-[30%] rounded-[24px] p-[30px] flex flex-col flex justify-start flex items-start bg-[#d7e5f6]"
+        class="max-sm:w-[100%] max-sm:p-[24px] w-[30%] rounded-[24px] p-[30px] flex flex-col flex justify-start flex items-start bg-[#d7e5f6]"
       >
         <svg
           width="33"
@@ -108,7 +108,7 @@
       </div>
 
       <div
-        class="w-[30%] rounded-[24px] p-[30px] flex flex-col flex justify-start flex items-start bg-[#e8dcf6]"
+        class="max-sm:w-[100%] max-sm:p-[24px] w-[30%] rounded-[24px] p-[30px] flex flex-col flex justify-start flex items-start bg-[#e8dcf6]"
       >
         <svg
           width="33"
@@ -134,7 +134,6 @@
         </p>
       </div>
     </div>
-
 
 
     <!-- Start coding by O-->
