feat: add responsive feature on contact section for mobile test on width 375px.

--- a/index.html
+++ b/index.html
@@ -140,17 +140,17 @@
     <!-- Start coding by O-->
     <section
       id="contact"
-      class="flex justify-center font-['Inter'] bg-[#F6F6FB]"
+      class="flex justify-center font-['Inter'] bg-[#F6F6FB] "
     >
       <div
         id="white-block"
-        class="w-10/12 flex justify-center bg-white rounded-3xl"
+        class="w-11/12 flex justify-center bg-white rounded-3xl max-[768px]:py-[60px]"
       >
         <div
           id="inputform"
-          class="flex flex-col justify-center items-center gap-6 w-2/4 bg-white py-8"
+          class="flex flex-col justify-center items-center gap-6 w-[89%] bg-white py-8"
         >
-          <h1 class="text-5xl font-semibold text-[#1A1A2C]">Get in Touch</h1>
+          <h1 class="text-5xl font-semibold text-[#1A1A2C] max-[768px]:text-center">Get in Touch</h1>
 
           <div id="input_interface" class="flex flex-col gap-3 w-full">
             <div id="nameinput" class="flex flex-col gap-1">
@@ -184,7 +184,7 @@
           <div id="buttonSubmit" class="w-full flex justify-center">
             <button
               type="button"
-              class="w-[589px] bg-black text-white rounded-3xl px-9 py-8 hover:bg-[#5F5F76] focus:bg-[#35354D ] focus:ring focus:ring-[#5F5F76]"
+              class="w-[589px] bg-black text-white rounded-3xl px-9 py-8 hover:bg-[#5F5F76] focus:bg-[#35354D ] focus:ring focus:ring-[#5F5F76] max-[768px]:h-[56px] max-[768px]:px-[36px] max-[768px]:py-[16px]"
             >
               Submit
             </button>
@@ -193,12 +193,12 @@
       </div>
     </section>
 
-    <footer class="flex justify-center bg-[#F6F6FB]">
-      <div class="flex justify-between w-10/12 py-20">
+    <footer class="flex justify-center bg-[#F6F6FB] ">
+      <div class="flex justify-between w-10/12 py-20 max-[768px]:flex-col max-[768px]:items-center max-[768px]:gap-[24px] max-[768px]:w-11/12">
         <div id="trade_mark" class="text-[#5F5F76]">
           Acme productivity app ©2024 
         </div>
-        <div id="footer_menu" class="flex justify-between gap-6 font-semibold ">
+        <div id="footer_menu" class="flex justify-between gap-6 font-semibold max-[768px]:text-[#1A1A2C] max-[768px]:gap-[37px]">
           <a href="index.html" class="hover:underline hover:underline-offset-4 hover:text-[#5E44FF]">FAQ</a>
           <a href="index.html" class="hover:underline hover:underline-offset-4 hover:text-[#5E44FF]">Terms</a>
           <a href="index.html" class="hover:underline hover:underline-offset-4 hover:text-[#5E44FF]">AI Policy</a>
