--- a/index.html
+++ b/index.html
@@ -15,27 +15,36 @@
     />
   </head>
   <body class="bg-gray-100">
-    <nav class="bg-white border rounded-[50px] p-6 m-10">
-      <img class="w-15 h-10 pl-10 absolute top-[55px]" src="image/logo.png " />
-      <ul class="flex justify-end items-center gap-20 mr-[50px]">
+    <nav class="bg-white border rounded-[50px] p-6 m-10 ">
+      <img class="w-15 h-10 pl-10 absolute top-[55px] max-sm:h-5 max-sm:pl-5 max-sm:absolute max-sm:mt-2" src="image/logo.png " />
+      <img class="max-sm:h-5 max-sm:ml-[420px] sm:hidden " src="image/bar.png">
+      <ul class="flex justify-end items-center gap-20 mr-[50px] max-sm:hidden">
         <p class="underline text-indigo-600">Home</p>
         <p>Features</p>
         <p>Pricing</p>
         <p>Contact</p>
       </ul>
     </nav>
+    <div class="bg-white border rounded-[50px] p-20 m-10 flex flex-col items-center gap-[50px] sm:hidden text-[20px]">
+      <p class="underline text-indigo-600">Home</p>
+      <p>Features</p>
+      <p>Pricing</p>
+      <p>Contact</p>
+    </div>
     <header class="flex items-center flex-col">
       <p
-        class="mt-[200px] border rounded-full bg-violet-200 px-4 py-1 text-indigo-600"
+        class="mt-[200px] max-sm:mt-[10px] border rounded-full bg-violet-200 px-4 py-1 text-indigo-600"
       >
         🌈Acme Productivity App
       </p>
-      <div class="text-[80px] flex font-bold">
+      <div class="text-[80px] flex font-bold max-sm:flex flex-col items-center">
         <span>Boost Your </span>
-        <span class="text-indigo-500 ml-4">Product</span>
-        <span>ivity</span>
+        <div class=" max-sm:flex flex-row">
+          <span class="text-indigo-500 ml-4">Product</span>
+          <span>ivity</span>
+        </div>
       </div>
-      <p class="text-[20px] font-semibold">
+      <p class="text-[20px] max-sm:text-[25px] font-semibold max-sm:text-center">
         streamline your workflow with our all-in-one productivity app
       </p>
       <div
